--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="nl">
 <head>
   <meta charset="utf-8" />
-  <title>BAX Scale & Rotate (client-side)</title>
+  <title>BAX Scale & Rotate (client-side) - versie 1.3</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/pako@2.1.0/dist/pako.min.js"></script>
   <style>
@@ -251,3 +251,4 @@ function download(text, name){ const blob = new Blob([text], {type:'application/
 </script>
 </body>
 </html>
+
