--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>BAX Scale & Rotate (client-side)</h1>
+      <h1>BAX Scale & Rotate (client-side) - versie 1.3</h1>
       <div class="drop" id="drop">
         <div><strong>Sleep je .bax hierheen</strong> of klik om te kiezen</div>
         <div class="muted">Alles gebeurt lokaal in je browser</div>
@@ -251,4 +251,5 @@ function download(text, name){ const blob = new Blob([text], {type:'application/
 </script>
 </body>
 </html>
+
 
