--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
   <div class="wrap">
     <div class="card">
-      <h1>Bluebeam markeringen - shcalen & roteren (versie 2.0)</h1>
+      <h1>Bluebeam markeringen - schalen & roteren (versie 2.0)</h1>
 
       <div class="drop" id="drop">
         <div><strong>Sleep .bax-bestanden hierheen</strong> of klik om te kiezen</div>
@@ -315,3 +315,4 @@ function downloadBlob(blob, name){ const a=document.createElement('a'); a.href=U
 </script>
 </body>
 </html>
+
